Running the project / Potential Changes
Added a section for potential changes that could be done to the project.
Added the "Running the project yourself" section